# Unreleased
fd3c5df * Add changelog.txt.
495ebb2 * Tweak Database container healthcheck for speed.
86bcdc3 * Disable building of tools and examples of dependencies to speed build from source.
b7550c0 * Update CMakefile.txt.
feeac02 * Adjust includes with recent upstream changes to fmt lib.
7e83e9c * switch cpm package from git based to pkg based to improve buid speed and save bandwidth.

# Version 0.1