@@ -23,5 +23,5 @@
     "appointments_data": {
     }
   },
-  "sha256sum": "81eaf148afea6c1c6577e518f6c5e9987a128b0e451670be9f3c171b91205b17"
+  "_sha256sum": "81eaf148afea6c1c6577e518f6c5e9987a128b0e451670be9f3c171b91205b17"
 }
