@@ -1,5 +1,6 @@
 # Unreleased
-fd3c5df * Add changelog.txt.
+        * Add header var "Enable-data-integrity-check : true" to toggle sha256sum payload verification.
+e1d3295 * Add changelog.txt.
 495ebb2 * Tweak Database container healthcheck for speed.
 86bcdc3 * Disable building of tools and examples of dependencies to speed build from source.
 b7550c0 * Update CMakefile.txt.
